--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "mobx": "^6.13.7",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
